Upgrade to Java 22