@@ -6,10 +6,10 @@
 
     <groupId>com.ustermetrics</groupId>
     <artifactId>ecos4j</artifactId>
-    <version>0-SNAPSHOT</version>
+    <version>1-SNAPSHOT</version>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>22</java.version>
         <lombok.version>1.18.32</lombok.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>com.ustermetrics</groupId>
             <artifactId>ecos4j-native</artifactId>
-            <version>0.2.0-2.0.10</version>
+            <version>1.0.2-2.0.10</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -95,9 +95,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -112,7 +109,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <argLine>@{argLine} --enable-native-access=com.ustermetrics.ecos4j --enable-preview</argLine>
+                    <argLine>@{argLine} --enable-native-access=com.ustermetrics.ecos4j</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -148,9 +145,6 @@
                                 </goals>
                             </execution>
                         </executions>
-                        <configuration>
-                            <additionalOptions>--enable-preview</additionalOptions>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
